# Retro-Learning-Environment

./: .cproject  .gitignore  .gitmodules  .project  ALE-2-0.rockspec  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  MANIFEST.in  Makefile  README.md  Readme.txt  ale-2-0.rockspec  ale-2-0.rockspec~  cmake_install.cmake  copy_cores.sh  log.txt  makefile.unix  makefile.unix~  rle-1-0.rockspec  rle.cfg  setup.py
ale_python_interface/: ale_c_wrapper.cpp  ale_c_wrapper.h  ale_python_interface.py
doc/examples/: python_example.py  sharedLibraryInterfaceExample.cpp  videoRecordingExample.cpp
doc/manual/: manual.tex
doc/scripts/: log.txt
rle_python_interface/: __init__.py  rle_c_wrapper.cpp  rle_c_wrapper.h  rle_python_interface.py
snes9x/: 65c816.h  cpuaddr.h  cpumacro.h  sa1.h
snes9x/tmp/: snes9x-cfgcmd.txt
snes9x/unix/: Makefile  config.info  config.status  snes9x
src/: ale_interface.cpp  ale_interface.hpp  main.cpp  rle_interface.cpp  rle_interface.hpp
src/common/: AleException.cpp  AleException.h  Array.hxx  ColourPalette.cpp  ColourPalette.hpp  Constants.cpp  Constants.h  DebugMacros.h  Log.cpp  Log.hpp  RleException.h  ScreenExporter.cpp  ScreenExporter.hpp  SoundExporter.cpp  SoundExporter.hpp  SoundNull.cxx  SoundNull.hxx  SoundSDL.cxx  SoundSDL.hxx  bspf.hxx  display_screen.cpp  display_screen.h
src/common/.deps/: SoundNull.d  SoundSDL.d
src/controllers/: ale_controller.cpp  ale_controller.hpp  fifo_controller.cpp  fifo_controller.hpp  rlglue_controller.cpp  rlglue_controller.hpp
src/emucore/: Console.cxx  Console.hxx  Control.cxx  Driving.cxx  Driving.hxx  FSNode.cxx  M6532.cxx  M6532.hxx  OSystem.cxx  OSystem.hxx  PropsSet.cxx  PropsSet.hxx  Settings.cxx  Settings.hxx  TIA.cxx  TIA.hxx  TIASnd.cxx  TIASnd.hxx
src/emucore/.deps/: Cart.d  Cart0840.d  Cart2K.d  Cart3E.d  Cart3F.d  Cart4A50.d  Cart4K.d  CartAR.d  CartCV.d  CartDPC.d  CartE0.d  CartE7.d  CartF4.d  CartF4SC.d  CartF6.d  CartF6SC.d  CartF8.d  CartF8SC.d  CartFASC.d  CartFE.d  CartMB.d  CartMC.d  CartUA.d  Console.d  M6532.d  OSystem.d  Props.d  PropsSet.d  Random.d  Settings.d  TIA.d
src/emucore/m6502/src/: Device.cxx  Device.hxx  System.cxx  System.hxx
src/emucore/m6502/src/.deps/: M6502Hi.d
src/environment/: AleSystem.cxx  AleSystem.hxx  Deserializer.cxx  Deserializer.hxx  Random.cxx  Random.hxx  RetroAgent.cpp  RetroAgent.h  RleSystem.cxx  RleSystem.hxx  Serializer.cxx  Serializer.hxx  Settings.cxx  Settings.hxx  ale_ram.cpp  ale_ram.hpp  ale_screen.cpp  ale_screen.hpp  ale_state.cpp  ale_state.hpp  phosphor_blend.cpp  phosphor_blend.hpp  retro_environment.cpp  retro_environment.cpp~  retro_environment.hpp  rle_ram.cpp  rle_ram.hpp  rle_screen.cpp  rle_screen.hpp  rle_state.cpp  rle_state.hpp  s9x_environment.cpp  s9x_environment.hpp
src/games/: AtariSettings.cpp  AtariSettings.hpp  GenesisSettings.cpp  GenesisSettings.hpp  N64Settings.cpp  N64Settings.hpp  NesSettings.cpp  NesSettings.hpp  RomSettings.cpp  RomSettings.hpp  RomUtils.cpp  RomUtils.hpp  Roms.cpp  Roms.hpp  SnesSettings.cpp  SnesSettings.hpp
src/games/supported/: Aladdin.cpp  Aladdin.hpp  ArkanoidDohItAgain.cpp  ArkanoidDohItAgain.hpp  ArkanoidIII.cpp  ArkanoidIII.hpp  AtariCollection.cpp  AtariCollection.hpp  AtariCollectionSettings.cpp  AtariCollectionSettings.hpp  Boxing.cpp  Boxing.hpp  Breakout.cpp  Breakout.hpp  BustAMove.cpp  BustAMove.hpp  ClassicKong.cpp  ClassicKong.hpp  ContraIII.cpp  ContraIII.hpp  FZero.cpp  FZero.hpp  FZeroNoSpeed.cpp  FZeroNoSpeed.hpp  FinalFight.cpp  FinalFight.hpp  FinalFight_WithRight.hpp  FinalFight_withRight.cpp  GradiusIII.cpp  GradiusIII.hpp  MarioKart64.cpp  MarioKart64.hpp  MortalKombat.cpp  MortalKombat.hpp  MortalKombat2Players.cpp  MortalKombat2Players.hpp  NBAGiveNGo.cpp  NBAGiveNGo.hpp  Seaquest.cpp  Seaquest.hpp  (+24 more)
src/os_dependent/: AleSystemUNIX.cxx  AleSystemUNIX.hxx  FSNodePOSIX.cxx  FSNodeWin32.cxx  OSystemUNIX.cxx  OSystemUNIX.hxx  OSystemWin32.cxx  OSystemWin32.hxx  RleSystemUNIX.cxx  RleSystemUNIX.hxx  SettingsUNIX.cxx  SettingsUNIX.hxx  SettingsWin32.cxx  SettingsWin32.hxx
src/os_dependent/.deps/: OSystemUNIX.d
test/: RetroAgentTest.cpp  RleTest.cpp  SerializeDeserializeTest.cpp  SettingsTest.cpp  gtest_arguments.h  mainTest.cpp  python_interface_test.py  rleCInterfaceTest.cpp
